--- a/RetroAchievementTracker/Shared/GameModal.razor
+++ b/RetroAchievementTracker/Shared/GameModal.razor
@@ -4,71 +4,69 @@
 
 @inject TrackedGamesService TrackedGamesService;
 
-<MudDialog>
+<MudDialog Style="height: 70%; overflow: auto">
     <TitleContent>
         <MudContainer><MudText Typo="Typo.h3" Align="Align.Center">@GameDataModal.Title</MudText></MudContainer>
     </TitleContent>
     <DialogContent>
-        <MudContainer Style="max-height: 600px; overflow-y: scroll">
-            <MudGrid Spacing=1>
-                <MudItem xs=6  Class="d-flex justify-center">
-                    <MudImage Src="@GameDataModal.ImageBoxArt" Height=200 Legnth=200/>
-                </MudItem>
-                <MudItem xs=6  Class="d-flex justify-center">
-                    <MudImage Src="@GameDataModal.ImageIngame" Height=200 Legnth=200/>
-                </MudItem>
-                <MudItem xs=3>
-                    <MudText Typo="Typo.h5" Align="Align.Center" Style="font-weight: bold">Achievement Count</MudText>
+        <MudGrid Spacing=1>
+            <MudItem xs=6  Class="d-flex justify-center">
+                <MudImage Src="@GameDataModal.ImageBoxArt" Height=200 Legnth=200/>
+            </MudItem>
+            <MudItem xs=6  Class="d-flex justify-center">
+                <MudImage Src="@GameDataModal.ImageIngame" Height=200 Legnth=200/>
+            </MudItem>
+            <MudItem xs=3>
+                <MudText Typo="Typo.h5" Align="Align.Center" Style="font-weight: bold">Achievement Count</MudText>
 
-                    <MudText Typo="Typo.h6" Align="Align.Center">
-                        @if(LoggedIn)
+                <MudText Typo="Typo.h6" Align="Align.Center">
+                    @if(LoggedIn)
+                    {
+                        @GameDataModal.AchievementsUnlocked
+                    }
+                    / @GameDataModal.AchievementCount (@GameDataModal.PercentageCompleted)</MudText>
+            </MudItem>
+            <MudItem xs=3>
+                <MudText Typo="Typo.h5" Align="Align.Center" Style="font-weight: bold">Genre</MudText>
+                <MudText Typo="Typo.h6" Align="Align.Center">@GameDataModal.Genre</MudText>
+            </MudItem>
+            <MudItem xs=3>
+                <MudText Typo="Typo.h5" Align="Align.Center" Style="font-weight: bold">Console</MudText>
+                <MudText Typo="Typo.h6" Align="Align.Center">@GameDataModal.ConsoleName</MudText>
+            </MudItem>
+            <MudItem xs=3>
+                <MudText Typo="Typo.h5" Align="Align.Center" Style="font-weight: bold">Players Casual (HC)</MudText>
+                <MudText Typo="Typo.h6" Align="Align.Center">@GameDataModal.PlayersCasual (@GameDataModal.PlayersHardcore)</MudText>
+            </MudItem>
+            @foreach(var achievement in Achievements)
+            {
+                <MudTooltip Arrow="true" Placement="Placement.Top">
+                    <ChildContent>
+                        <MudItem xs=2 Class="align-content-stretch">
+                            <MudImage Src="@achievement.Value.BadgeUrl" Class="ml-1" Height=48 Width=48/>
+                        </MudItem>
+                    </ChildContent>
+                    <TooltipContent>
+                        <MudText Style="font-weight: bold">@achievement.Value.Title</MudText>
+                        <MudText Style="word-break: break-all;">@achievement.Value.Description</MudText>
+                        <MudText>Points: @achievement.Value.Points</MudText>
+                        <MudText>Players earned (HC): @achievement.Value.NumAwarded (@achievement.Value.NumAwardedHardcore)</MudText>
+                        <MudText>Players earned (HC): @achievement.Value.NumAwarded (@achievement.Value.NumAwardedHardcore)</MudText>
+                        @if (LoggedIn)
                         {
-                            @GameDataModal.AchievementsUnlocked
-                        }
-                        / @GameDataModal.AchievementCount (@GameDataModal.PercentageCompleted)</MudText>
-                </MudItem>
-                <MudItem xs=3>
-                    <MudText Typo="Typo.h5" Align="Align.Center" Style="font-weight: bold">Genre</MudText>
-                    <MudText Typo="Typo.h6" Align="Align.Center">@GameDataModal.Genre</MudText>
-                </MudItem>
-                <MudItem xs=3>
-                    <MudText Typo="Typo.h5" Align="Align.Center" Style="font-weight: bold">Console</MudText>
-                    <MudText Typo="Typo.h6" Align="Align.Center">@GameDataModal.ConsoleName</MudText>
-                </MudItem>
-                <MudItem xs=3>
-                    <MudText Typo="Typo.h5" Align="Align.Center" Style="font-weight: bold">Players Casual (HC)</MudText>
-                    <MudText Typo="Typo.h6" Align="Align.Center">@GameDataModal.PlayersCasual (@GameDataModal.PlayersHardcore)</MudText>
-                </MudItem>
-                @foreach(var achievement in Achievements)
-                {
-                    <MudTooltip Arrow="true" Placement="Placement.Top">
-                        <ChildContent>
-                            <MudItem xs=2 Class="align-content-stretch">
-                                <MudImage Src="@achievement.Value.BadgeUrl" Class="ml-1" Height=48 Width=48/>
-                            </MudItem>
-                        </ChildContent>
-                        <TooltipContent>
-                            <MudText Style="font-weight: bold">@achievement.Value.Title</MudText>
-                            <MudText Style="word-break: break-all;">@achievement.Value.Description</MudText>
-                            <MudText>Points: @achievement.Value.Points</MudText>
-                            <MudText>Players earned (HC): @achievement.Value.NumAwarded (@achievement.Value.NumAwardedHardcore)</MudText>
-                            <MudText>Players earned (HC): @achievement.Value.NumAwarded (@achievement.Value.NumAwardedHardcore)</MudText>
-                            @if (LoggedIn)
+                            @if (achievement.Value.DateEarnedHardcore != null)
                             {
-                                @if (achievement.Value.DateEarnedHardcore != null)
-                                {
-                                    <MudText>Date Unlocked (HC): @DateTime.Parse(achievement.Value.DateEarnedHardcore.ToString()).ToStringWithSuffix("dd MMMM yyyy - hh:mmtt zzz")</MudText>
-                                }
-                                @if (achievement.Value.DateEarned != null)
-                                {
-                                    <MudText>Date Unlocked: @DateTime.Parse(achievement.Value.DateEarned.ToString()).ToStringWithSuffix("dd MMMM yyyy - hh:mmtt zzz")</MudText>
-                                }
+                                <MudText>Date Unlocked (HC): @DateTime.Parse(achievement.Value.DateEarnedHardcore.ToString()).ToStringWithSuffix("dd MMMM yyyy - hh:mmtt zzz")</MudText>
                             }
-                        </TooltipContent>
-                    </MudTooltip>
-                }
-            </MudGrid>
-        </MudContainer>
+                            @if (achievement.Value.DateEarned != null)
+                            {
+                                <MudText>Date Unlocked: @DateTime.Parse(achievement.Value.DateEarned.ToString()).ToStringWithSuffix("dd MMMM yyyy - hh:mmtt zzz")</MudText>
+                            }
+                        }
+                    </TooltipContent>
+                </MudTooltip>
+            }
+        </MudGrid>
     </DialogContent>
     <DialogActions>
         @if(LoggedIn)
