--- a/RetroAchievementTracker/Shared/Dialogs/GameDialog.razor
+++ b/RetroAchievementTracker/Shared/Dialogs/GameDialog.razor
@@ -4,7 +4,7 @@
 
 @inject TrackedGamesService TrackedGamesService;
 
-<MudDialog Style="height: 70%; overflow: auto">
+<MudDialog Style="min-height 300px; max-height: 600px; overflow: auto">
     <TitleContent>
         <MudContainer><MudText Typo="Typo.h3" Align="Align.Center">@GameDataModal.Title</MudText></MudContainer>
     </TitleContent>
