--- a/RetroAchievementTracker/Pages/TrackedGames.razor
+++ b/RetroAchievementTracker/Pages/TrackedGames.razor
@@ -4,6 +4,7 @@
 @using RetroAchievementTracker.Data.Login
 @using RetroAchievementTracker.Data.TableData
 @using RetroAchievementTracker.Data.Enums
+@using RetroAchievementTracker.Shared.Dialogs
 
 @inject GameDataModalService GameDataModalService;
 @inject ISnackbar Snackbar;
@@ -110,6 +111,6 @@
             MaxWidth = MaxWidth.Medium
         };
 
-        var dialog = DialogService.Show<GameModal>("Game Info", parameters, options);
+        var dialog = DialogService.Show<GameDialog>("Game Info", parameters, options);
     }
 }
