--- a/RetroAchievementTracker/Shared/Dialogs/PasswordResetDialog.razor
+++ b/RetroAchievementTracker/Shared/Dialogs/PasswordResetDialog.razor
@@ -11,25 +11,26 @@
         <TitleContent>
             <MudText Typo="Typo.h5" Style="font-weight: bold">
                 <MudIcon Icon="@Icons.Filled.Login" Size="Size.Medium" Class="mr-1 mb-n1"></MudIcon>
-                Login</MudText>
+                Password Reset</MudText>
         </TitleContent>
         <DialogContent>
             <MudText>You can find your RetroAchievements API key at <MudLink Href="https://retroachievements.org/controlpanel.php" Target="_blank">https://retroachievements.org/controlpanel.php</MudLink></MudText>
-            <MudTextField @bind-Value="model.Username" For="@(() => model.Username)" Label="RA Username" Required=true></MudTextField>
-            <MudTextField @bind-Value="model.ApiKey" For="@(() => model.ApiKey)" Label="RA Api Key" Required=true></MudTextField>
+            <MudTextField @bind-Value="model.RAUsername" For="@(() => model.RAUsername)" Label="Username" Required=true></MudTextField>
+            <MudTextField @bind-Value="model.RAAPIKey" For="@(() => model.RAAPIKey)" Label="RA API Key" Required=true></MudTextField>
+            <MudTextField @bind-Value="model.Password" For="@(() => model.Password)" Label="New Password" Required=true></MudTextField>
             @if(succesful == false)
             {
                 <MudAlert Severity="Severity.Error">@reason</MudAlert>
             }
         </DialogContent>
         <DialogActions>
-            <MudButton Color="Color.Success" Variant="Variant.Filled" ButtonType="ButtonType.Submit" Class="mt-3">Login</MudButton>
+            <MudButton Color="Color.Success" Variant="Variant.Filled" ButtonType="ButtonType.Submit" Class="mt-3">Reset Password</MudButton>
             <MudButton Color="Color.Error" Variant="Variant.Filled" Class="mt-3" OnClick="Cancel">Cancel</MudButton>
         </DialogActions>
     </MudDialog>
 </EditForm>
 @code {
-    LoginForm model = new LoginForm();
+    ResetForm model = new ResetForm();
     bool? succesful = null;
     public string reason;
 
@@ -37,7 +38,7 @@
 
     public async void OnValidSubmit()
     {
-        var response = await LoginService.LogUserIn(model.Username.ToLower(), model.ApiKey);
+        var response = await LoginService.ResetPassword(model.RAUsername.ToLower(), model.RAAPIKey, model.Password);
 
         if(response.Succesful == false)
         {
@@ -47,8 +48,7 @@
         }
         else
         {
-            await LocalStorage.SetItemAsync("loginToken", response.LoginToken);
-            Snackbar.Add("Succesfully logged in!", Severity.Success);
+            Snackbar.Add(response.Reason, Severity.Success);
             MudDialog.Close(true);
         }
     }
@@ -58,14 +58,18 @@
         MudDialog.Close(false);
     }
 
-    public class LoginForm
+    public class ResetForm
     {
         [Required]
         [StringLength(100)]
-        public string Username { get; set; }
+        public string RAUsername { get; set; }
 
         [Required]
         [StringLength(100)]
-        public string ApiKey{ get; set; }
+        public string RAAPIKey{ get; set; }
+
+        [Required]
+        [StringLength(100)]
+        public string Password{ get; set; }
     }
 }
