--- a/RetroAchievementTracker/Shared/Dialogs/LoginDialog.razor
+++ b/RetroAchievementTracker/Shared/Dialogs/LoginDialog.razor
@@ -17,7 +17,7 @@
         <DialogContent>
             <MudText>You can find your RetroAchievements API key at <MudLink Href="https://retroachievements.org/controlpanel.php" Target="_blank">https://retroachievements.org/controlpanel.php</MudLink></MudText>
             <MudTextField @bind-Value="model.Username" For="@(() => model.Username)" Label="Username" Required=true></MudTextField>
-            <MudTextField @bind-Value="model.Password" For="@(() => model.Password)" Label="Password" Required=true></MudTextField>
+            <MudTextField @bind-Value="model.Password" For="@(() => model.Password)" Label="Password" Required=true InputType="@PasswordInput" Adornment="Adornment.End" AdornmentIcon="@PasswordInputIcon" OnAdornmentClick="TogglePassword" AdornmentAriaLabel="Show Password"></MudTextField>
             @if(succesful == false)
             {
                 <MudAlert Severity="Severity.Error">@reason</MudAlert>
@@ -26,7 +26,7 @@
         <DialogActions>
             <MudButton Color="Color.Success" Variant="Variant.Filled" ButtonType="ButtonType.Submit" Class="mt-3">Login</MudButton>
             <MudButton Color="Color.Error" Variant="Variant.Filled" Class="mt-3" OnClick="Cancel">Cancel</MudButton>
-            <MudButton Color="Color.Default" Variant="Variant.Filled" Class="mt-3" OnClick="OpenResetPasswordForm">Reset Password</MudButton>
+            <MudButton Color="Color.Primary" Variant="Variant.Filled" Class="mt-3" OnClick="OpenResetPasswordForm">Reset Password</MudButton>
         </DialogActions>
     </MudDialog>
 </EditForm>
@@ -34,6 +34,9 @@
     LoginForm model = new LoginForm();
     bool? succesful = null;
     public string reason;
+    string PasswordInputIcon = Icons.Material.Filled.VisibilityOff;
+    bool isShow;
+    InputType PasswordInput = InputType.Password;
 
     [CascadingParameter] MudDialogInstance MudDialog { get; set; }
 
@@ -65,6 +68,21 @@
     private void Cancel()
     {
         MudDialog.Close(false);
+    }
+
+    private void TogglePassword()
+    {
+        @if (isShow)
+        {
+            isShow = false;
+            PasswordInputIcon = Icons.Material.Filled.VisibilityOff;
+            PasswordInput = InputType.Password;
+        }
+        else {
+            isShow = true;
+            PasswordInputIcon = Icons.Material.Filled.Visibility;
+            PasswordInput = InputType.Text;
+        }
     }
 
     public class LoginForm
