--- a/RetroAchievementTracker/Shared/Dialogs/RegisterAccountDialog.razor
+++ b/RetroAchievementTracker/Shared/Dialogs/RegisterAccountDialog.razor
@@ -17,7 +17,7 @@
             <MudText>You can find your RetroAchievements API key at <MudLink Href="https://retroachievements.org/controlpanel.php" Target="_blank">https://retroachievements.org/controlpanel.php</MudLink></MudText>
             <MudTextField @bind-Value="model.RAUsername" For="@(() => model.RAUsername)" Label="RA Username" Required=true></MudTextField>
             <MudTextField @bind-Value="model.RAAPIKey" For="@(() => model.RAAPIKey)" Label="RA API Key" Required=true></MudTextField>
-            <MudTextField @bind-Value="model.Password" For="@(() => model.Password)" Label="Password" Required=true></MudTextField>
+            <MudTextField @bind-Value="model.Password" For="@(() => model.Password)" Label="Password" Required=true InputType="@PasswordInput" Adornment="Adornment.End" AdornmentIcon="@PasswordInputIcon" OnAdornmentClick="TogglePassword" AdornmentAriaLabel="Show Password"></MudTextField>
             @if(succesful == false)
             {
                 <MudAlert Severity="Severity.Error">@reason</MudAlert>
@@ -33,6 +33,9 @@
     RegisterForm model = new RegisterForm();
     bool? succesful = null;
     public string reason;
+    string PasswordInputIcon = Icons.Material.Filled.VisibilityOff;
+    bool isShow;
+    InputType PasswordInput = InputType.Password;
 
     [CascadingParameter] MudDialogInstance MudDialog { get; set; }
 
@@ -51,6 +54,21 @@
             await LocalStorage.SetItemAsync("loginToken", response.LoginToken);
             Snackbar.Add("Succesfully logged in!", Severity.Success);
             MudDialog.Close(true);
+        }
+    }
+
+    private void TogglePassword()
+    {
+        @if (isShow)
+        {
+            isShow = false;
+            PasswordInputIcon = Icons.Material.Filled.VisibilityOff;
+            PasswordInput = InputType.Password;
+        }
+        else {
+            isShow = true;
+            PasswordInputIcon = Icons.Material.Filled.Visibility;
+            PasswordInput = InputType.Text;
         }
     }
 
