--- a/RetroAchievementTracker/Shared/Dialogs/LoginDialog.razor
+++ b/RetroAchievementTracker/Shared/Dialogs/LoginDialog.razor
@@ -18,7 +18,7 @@
             <MudText>You can find your RetroAchievements API key at <MudLink Href="https://retroachievements.org/controlpanel.php" Target="_blank">https://retroachievements.org/controlpanel.php</MudLink></MudText>
             <MudTextField @bind-Value="model.Username" For="@(() => model.Username)" Label="Username" Required=true></MudTextField>
             <MudTextField @bind-Value="model.Password" For="@(() => model.Password)" Label="Password" Required=true InputType="@PasswordInput" Adornment="Adornment.End" AdornmentIcon="@PasswordInputIcon" OnAdornmentClick="TogglePassword" AdornmentAriaLabel="Show Password"></MudTextField>
-            @if(succesful == false)
+            @if(successful == false)
             {
                 <MudAlert Severity="Severity.Error">@reason</MudAlert>
             }
@@ -32,7 +32,7 @@
 </EditForm>
 @code {
     LoginForm model = new LoginForm();
-    bool? succesful = null;
+    bool? successful = null;
     public string reason;
     string PasswordInputIcon = Icons.Material.Filled.VisibilityOff;
     bool isShow;
@@ -44,16 +44,16 @@
     {
         var response = LoginService.LogUserIn(model.Username.ToLower(), model.Password);
 
-        if(response.Succesful == false)
+        if(response.Successful == false)
         {
-            succesful = false;
+            successful = false;
             reason = response.Reason;
             StateHasChanged();
         }
         else
         {
             await LocalStorage.SetItemAsync("loginToken", response.LoginToken);
-            Snackbar.Add("Succesfully logged in!", Severity.Success);
+            Snackbar.Add("Successfully logged in!", Severity.Success);
             MudDialog.Close(true);
         }
     }
