--- a/RetroAchievementTracker/Shared/NavMenu.razor
+++ b/RetroAchievementTracker/Shared/NavMenu.razor
@@ -85,6 +85,8 @@
             <MudNavLink Href="/watarasupervision" Style="color: #E3F2FD;">Watara Supervision<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.WataraSupervision]/@gameCounts[(int)Consoles.ConsoleNames.WataraSupervision]</MudText></MudNavLink>
             <MudNavLink Href="/wonderswan" Style="color: #E3F2FD;">WonderSwan<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.WonderSwan]/@gameCounts[(int)Consoles.ConsoleNames.WonderSwan]</MudText></MudNavLink>
             <MudNavLink Href="/amstradcpc" Style="color: #E3F2FD;">Amstrad CPC<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.AmstradCPC]/@gameCounts[(int)Consoles.ConsoleNames.AmstradCPC]</MudText></MudNavLink>
+            <MudNavLink Href="/arduboy" Style="color: #E3F2FD;">Arduboy<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.Arduboy]/@gameCounts[(int)Consoles.ConsoleNames.Arduboy]</MudText></MudNavLink>
+            <MudNavLink Href="/wasm4" Style="color: #E3F2FD;">WASM-4<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.WASM4]/@gameCounts[(int)Consoles.ConsoleNames.WASM4]</MudText></MudNavLink>
         </MudNavGroup>
     </MudNavMenu>
 </MudDrawer>
