--- a/RetroAchievementTracker/Pages/TrackedGames.razor
+++ b/RetroAchievementTracker/Pages/TrackedGames.razor
@@ -105,7 +105,7 @@
             return;
         }
 
-        var parameters = new DialogParameters { ["GameDataModal"] = game, ["LoggedIn"] = LoggedIn };
+        var parameters = new DialogParameters { ["GameDataModal"] = game, ["LoggedIn"] = LoggedIn, ["LoggedInUser"] = LoggedInUser };
         var options = new DialogOptions
         {
             MaxWidth = MaxWidth.Medium
