--- a/RetroAchievementTracker/Pages/_Layout.cshtml
+++ b/RetroAchievementTracker/Pages/_Layout.cshtml
@@ -7,14 +7,15 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <meta property="og:title" content="RetroAchievement Tracker" />
-      <meta property="og:type" content="website" />
-      <meta property="og:url" content="https://ra.bregan.me" />
-      <meta property="og:image" content="https://ra.bregan.me/rtt.png" />
-      <meta property="og:description" content="Achievement tracking website for RetroAchievements" />
-      <meta name="theme-color" content="#ff9800">
-      <!-- Include this to make the og:image larger -->
-      <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:title" content="RetroAchievement Tracker" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ra.bregan.me" />
+    <meta property="og:image" content="https://ra.bregan.me/rtt.png" />
+    <meta property="og:description" content="Achievement tracking website for RetroAchievements" />
+    <meta name="theme-color" content="#ff9800">
+    <!-- Include this to make the og:image larger -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="description" content="RetroAchievementsTracker is a Tracker for the website RetroAchievements. This Retro Achievement tracking site allows for you to track games, see your inprogress games, see newly added games plus more. New RetroAchievement consoles are added quickly and the site is updated daily." />
     <base href="~/" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -22,6 +23,7 @@
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <link href="css/site.css" rel="stylesheet" />
     <link href="RetroAchievementTracker.styles.css" rel="stylesheet" />
+    <script src="_content/Blazor-Analytics/blazor-analytics.js"></script>
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
