--- a/RetroAchievementTracker/Shared/Dialogs/GameDialog.razor
+++ b/RetroAchievementTracker/Shared/Dialogs/GameDialog.razor
@@ -3,75 +3,79 @@
 @using RetroAchievementTracker.Data.TrackedGames
 
 @inject TrackedGamesService TrackedGamesService;
+@inject GameDataModalService GameDataModalService;
 
-<MudDialog Style="min-height 300px; max-height: 600px; overflow: auto">
+<MudDialog Style="min-height 300px; overflow: auto">
     <TitleContent>
         <MudContainer><MudText Typo="Typo.h3" Align="Align.Center">@GameDataModal.Title</MudText></MudContainer>
     </TitleContent>
     <DialogContent>
-        <MudGrid Spacing=1>
-            <MudItem xs=6  Class="d-flex justify-center">
-                <MudImage Src="@GameDataModal.ImageBoxArt" Height=200 Legnth=200/>
-            </MudItem>
-            <MudItem xs=6  Class="d-flex justify-center">
-                <MudImage Src="@GameDataModal.ImageIngame" Height=200 Legnth=200/>
-            </MudItem>
-            <MudItem xs=3>
-                <MudText Typo="Typo.h5" Align="Align.Center" Style="font-weight: bold">Achievement Count</MudText>
+        <MudContainer Style="min-height 300px; max-height: 600px; overflow: auto">
+            <MudGrid Spacing=1>
+                <MudItem xs=6  Class="d-flex justify-center">
+                    <MudImage Src="@GameDataModal.ImageBoxArt" Height=200 Legnth=200/>
+                </MudItem>
+                <MudItem xs=6  Class="d-flex justify-center">
+                    <MudImage Src="@GameDataModal.ImageIngame" Height=200 Legnth=200/>
+                </MudItem>
+                <MudItem xs=3>
+                    <MudText Typo="Typo.h5" Align="Align.Center" Style="font-weight: bold">Achievement Count</MudText>
 
-                <MudText Typo="Typo.h6" Align="Align.Center">
-                    @if(LoggedIn)
-                    {
-                        @GameDataModal.AchievementsUnlocked
-                    }
-                    / @GameDataModal.AchievementCount (@GameDataModal.PercentageCompleted)</MudText>
-            </MudItem>
-            <MudItem xs=3>
-                <MudText Typo="Typo.h5" Align="Align.Center" Style="font-weight: bold">Genre</MudText>
-                <MudText Typo="Typo.h6" Align="Align.Center">@GameDataModal.Genre</MudText>
-            </MudItem>
-            <MudItem xs=3>
-                <MudText Typo="Typo.h5" Align="Align.Center" Style="font-weight: bold">Console</MudText>
-                <MudText Typo="Typo.h6" Align="Align.Center">@GameDataModal.ConsoleName</MudText>
-            </MudItem>
-            <MudItem xs=3>
-                <MudText Typo="Typo.h5" Align="Align.Center" Style="font-weight: bold">Players Casual (HC)</MudText>
-                <MudText Typo="Typo.h6" Align="Align.Center">@GameDataModal.PlayersCasual (@GameDataModal.PlayersHardcore)</MudText>
-            </MudItem>
-            @foreach(var achievement in Achievements)
-            {
-                <MudTooltip Arrow="true" Placement="Placement.Top">
-                    <ChildContent>
-                        <MudItem xs=2 Class="align-content-stretch">
-                            <MudImage Src="@achievement.Value.BadgeUrl" Class="ml-1" Height=48 Width=48/>
-                        </MudItem>
-                    </ChildContent>
-                    <TooltipContent>
-                        <MudText Style="font-weight: bold">@achievement.Value.Title</MudText>
-                        <MudText Style="word-break: break-all;">@achievement.Value.Description</MudText>
-                        <MudText>Points: @achievement.Value.Points</MudText>
-                        <MudText>Players earned (HC): @achievement.Value.NumAwarded (@achievement.Value.NumAwardedHardcore)</MudText>
-                        <MudText>Players earned (HC): @achievement.Value.NumAwarded (@achievement.Value.NumAwardedHardcore)</MudText>
-                        @if (LoggedIn)
+                    <MudText Typo="Typo.h6" Align="Align.Center">
+                        @if(LoggedIn)
                         {
-                            @if (achievement.Value.DateEarnedHardcore != null)
-                            {
-                                <MudText>Date Unlocked (HC): @DateTime.Parse(achievement.Value.DateEarnedHardcore.ToString()).ToStringWithSuffix("dd MMMM yyyy - hh:mmtt zzz")</MudText>
-                            }
-                            @if (achievement.Value.DateEarned != null)
-                            {
-                                <MudText>Date Unlocked: @DateTime.Parse(achievement.Value.DateEarned.ToString()).ToStringWithSuffix("dd MMMM yyyy - hh:mmtt zzz")</MudText>
-                            }
+                            @GameDataModal.AchievementsUnlocked
                         }
-                    </TooltipContent>
-                </MudTooltip>
-            }
-        </MudGrid>
+                        / @GameDataModal.AchievementCount (@GameDataModal.PercentageCompleted)</MudText>
+                </MudItem>
+                <MudItem xs=3>
+                    <MudText Typo="Typo.h5" Align="Align.Center" Style="font-weight: bold">Genre</MudText>
+                    <MudText Typo="Typo.h6" Align="Align.Center">@GameDataModal.Genre</MudText>
+                </MudItem>
+                <MudItem xs=3>
+                    <MudText Typo="Typo.h5" Align="Align.Center" Style="font-weight: bold">Console</MudText>
+                    <MudText Typo="Typo.h6" Align="Align.Center">@GameDataModal.ConsoleName</MudText>
+                </MudItem>
+                <MudItem xs=3>
+                    <MudText Typo="Typo.h5" Align="Align.Center" Style="font-weight: bold">Players Casual (HC)</MudText>
+                    <MudText Typo="Typo.h6" Align="Align.Center">@GameDataModal.PlayersCasual (@GameDataModal.PlayersHardcore)</MudText>
+                </MudItem>
+                @foreach(var achievement in Achievements)
+                {
+                    <MudTooltip Arrow="true" Placement="Placement.Top">
+                        <ChildContent>
+                            <MudItem xs=2 Class="align-content-stretch">
+                                <MudImage Src="@achievement.Value.BadgeUrl" Class="ml-1" Height=48 Width=48/>
+                            </MudItem>
+                        </ChildContent>
+                        <TooltipContent>
+                            <MudText Style="font-weight: bold">@achievement.Value.Title</MudText>
+                            <MudText Style="word-break: break-all;">@achievement.Value.Description</MudText>
+                            <MudText>Points: @achievement.Value.Points</MudText>
+                            <MudText>Players earned (HC): @achievement.Value.NumAwarded (@achievement.Value.NumAwardedHardcore)</MudText>
+                            <MudText>Players earned (HC): @achievement.Value.NumAwarded (@achievement.Value.NumAwardedHardcore)</MudText>
+                            @if (LoggedIn)
+                            {
+                                @if (achievement.Value.DateEarnedHardcore != null)
+                                {
+                                    <MudText>Date Unlocked (HC): @DateTime.Parse(achievement.Value.DateEarnedHardcore.ToString()).ToStringWithSuffix("dd MMMM yyyy - hh:mmtt zzz")</MudText>
+                                }
+                                @if (achievement.Value.DateEarned != null)
+                                {
+                                    <MudText>Date Unlocked: @DateTime.Parse(achievement.Value.DateEarned.ToString()).ToStringWithSuffix("dd MMMM yyyy - hh:mmtt zzz")</MudText>
+                                }
+                            }
+                        </TooltipContent>
+                    </MudTooltip>
+                }
+            </MudGrid>
+        </MudContainer>
     </DialogContent>
     <DialogActions>
         @if(LoggedIn)
         {
             <MudSwitch Label="Hide Completed" CheckedChanged="ChangeCompletedGamesToggle" T=bool Checked=hideCompleted Color=Color.Info/>
+                <MudButton Color="Color.Info" Variant="Variant.Filled" Class="mt-3" Style="color: white !important;" OnClick="UpdateAchievements">Update Achievements</MudButton>
 
             @if(GameDataModal.GameTracked)
             {
@@ -100,6 +104,7 @@
     [CascadingParameter] public MudDialogInstance MudDialog { get; set; }
     [Parameter] public GameDataModal GameDataModal { get; set; }
     [Parameter] public bool LoggedIn { get; set; }
+    [Parameter] public string LoggedInUser { get; set; }
     private bool hideCompleted;
     private Dictionary<string, Achievement> Achievements;
 
@@ -143,4 +148,19 @@
         StateHasChanged();
     }
 
+    public async void UpdateAchievements()
+    {
+        GameDataModal = await GameDataModalService.GetLoggedInDataToPopulateModal(GameDataModal.Id, LoggedInUser);
+
+        if(hideCompleted)
+        {
+            Achievements = GameDataModal.Achievements.Where(x => x.Value.DateEarned == null).ToDictionary(x => x.Key, x => x.Value);
+            StateHasChanged();
+        }
+        else
+        {
+            Achievements = GameDataModal.Achievements;
+            StateHasChanged();
+        }
+    }
 }
