--- a/RetroAchievementTracker/_Imports.razor
+++ b/RetroAchievementTracker/_Imports.razor
@@ -9,3 +9,5 @@
 @using RetroAchievementTracker
 @using RetroAchievementTracker.Shared
 @using MudBlazor
+@using Blazor.Analytics
+@using Blazor.Analytics.Components
