--- a/RetroAchievementTracker/Pages/TrackedGames.razor
+++ b/RetroAchievementTracker/Pages/TrackedGames.razor
@@ -1,12 +1,12 @@
 ﻿@page "/trackedgames"
 
-@using RetroAchievementTracker.Data.GameDataModal
+@using RetroAchievementTracker.Data.GameData
 @using RetroAchievementTracker.Data.Login
 @using RetroAchievementTracker.Data.TableData
 @using RetroAchievementTracker.Data.Enums
 @using RetroAchievementTracker.Shared.Dialogs
 
-@inject GameDataModalService GameDataModalService;
+@inject GameDataService GameDataModalService;
 @inject ISnackbar Snackbar;
 @inject IDialogService DialogService;
 @inject LoginService LoginService;
