bug fixes and new systems

--- a/RetroAchievementTracker/Shared/NavMenu.razor
+++ b/RetroAchievementTracker/Shared/NavMenu.razor
@@ -74,19 +74,21 @@
         </MudNavGroup>
         <MudNavGroup Title="Other" Style="color: #E3F2FD;" Icon="@Icons.Filled.Games" IconColor="Color.Warning">
             <MudNavLink Href="/3do" Style="color: #E3F2FD;">3DO<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.ThreeDOInteractiveMultiplayer]/@gameCounts[(int)Consoles.ConsoleNames.ThreeDOInteractiveMultiplayer]</MudText></MudNavLink>
-            <MudNavLink Href="/arcade" Style="color: #E3F2FD;">Arcade<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.Arcade]/@gameCounts[(int)Consoles.ConsoleNames.Arcade]</MudText></MudNavLink>
+            <MudNavLink Href="/amstradcpc" Style="color: #E3F2FD;">Amstrad CPC<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.AmstradCPC]/@gameCounts[(int)Consoles.ConsoleNames.AmstradCPC]</MudText></MudNavLink>
             <MudNavLink Href="/appleii" Style="color: #E3F2FD;">Apple II<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.AppleII]/@gameCounts[(int)Consoles.ConsoleNames.AppleII]</MudText></MudNavLink>
+            <MudNavLink Href="/arcade" Style="color: #E3F2FD;">Arcade<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.Arcade]/@gameCounts[(int)Consoles.ConsoleNames.Arcade]</MudText></MudNavLink>
+            <MudNavLink Href="/arduboy" Style="color: #E3F2FD;">Arduboy<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.Arduboy]/@gameCounts[(int)Consoles.ConsoleNames.Arduboy]</MudText></MudNavLink>
             <MudNavLink Href="/coecovision" Style="color: #E3F2FD;">CoecoVision<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.ColecoVision]/@gameCounts[(int)Consoles.ConsoleNames.ColecoVision]</MudText></MudNavLink>
+            <MudNavLink Href="/channelf" Style="color: #E3F2FD;">Fairchild Channel F<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.FairchildChannelF]/@gameCounts[(int)Consoles.ConsoleNames.FairchildChannelF]</MudText></MudNavLink>
             <MudNavLink Href="/intellivision" Style="color: #E3F2FD;">Intellivision<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.Intellivision]/@gameCounts[(int)Consoles.ConsoleNames.Intellivision]</MudText></MudNavLink>
             <MudNavLink Href="/odyssesy2" Style="color: #E3F2FD;">Odyssesy 2<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.MagnavoxOdyssey2]/@gameCounts[(int)Consoles.ConsoleNames.MagnavoxOdyssey2]</MudText></MudNavLink>
+            <MudNavLink Href="/megaduck" Style="color: #E3F2FD;">Mega Duck<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.MegaDuck]/@gameCounts[(int)Consoles.ConsoleNames.MegaDuck]</MudText></MudNavLink>
             <MudNavLink Href="/msx" Style="color: #E3F2FD;">MSX<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.MSX]/@gameCounts[(int)Consoles.ConsoleNames.MSX]</MudText></MudNavLink>
             <MudNavLink Href="/neogeopocket" Style="color: #E3F2FD;">Neo Geo Pocket<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.NeoGeoPocket]/@gameCounts[(int)Consoles.ConsoleNames.NeoGeoPocket]</MudText></MudNavLink>
             <MudNavLink Href="/vectrex" Style="color: #E3F2FD;">Vectrex<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.Vectrex]/@gameCounts[(int)Consoles.ConsoleNames.Vectrex]</MudText></MudNavLink>
+            <MudNavLink Href="/wasm4" Style="color: #E3F2FD;">WASM-4<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.WASM4]/@gameCounts[(int)Consoles.ConsoleNames.WASM4]</MudText></MudNavLink>
             <MudNavLink Href="/watarasupervision" Style="color: #E3F2FD;">Watara Supervision<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.WataraSupervision]/@gameCounts[(int)Consoles.ConsoleNames.WataraSupervision]</MudText></MudNavLink>
             <MudNavLink Href="/wonderswan" Style="color: #E3F2FD;">WonderSwan<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.WonderSwan]/@gameCounts[(int)Consoles.ConsoleNames.WonderSwan]</MudText></MudNavLink>
-            <MudNavLink Href="/amstradcpc" Style="color: #E3F2FD;">Amstrad CPC<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.AmstradCPC]/@gameCounts[(int)Consoles.ConsoleNames.AmstradCPC]</MudText></MudNavLink>
-            <MudNavLink Href="/arduboy" Style="color: #E3F2FD;">Arduboy<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.Arduboy]/@gameCounts[(int)Consoles.ConsoleNames.Arduboy]</MudText></MudNavLink>
-            <MudNavLink Href="/wasm4" Style="color: #E3F2FD;">WASM-4<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.WASM4]/@gameCounts[(int)Consoles.ConsoleNames.WASM4]</MudText></MudNavLink>
         </MudNavGroup>
     </MudNavMenu>
 </MudDrawer>
@@ -95,7 +97,10 @@
 
 <MudAppBar Fixed=true>
     <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@ToggleDrawer" />
-    <MudSpacer></MudSpacer>
+    <MudSpacer ></MudSpacer>
+
+    <MudText>Support: Guinea#1337 / </MudText>
+    <MudIconButton Variant="Variant.Filled" Icon="@Icons.Custom.Brands.GitHub" Style="color: white;" Link="https://github.com/Bregann/RetroAchievements-AchievementTracker" Target="_blank"></MudIconButton>
     @if(!loggedIn)
     {
         <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="OpenRegistrationModal" Class="mr-2">Register</MudButton>
