--- a/RetroAchievementTracker/Pages/_Layout.cshtml
+++ b/RetroAchievementTracker/Pages/_Layout.cshtml
@@ -25,6 +25,19 @@
     <link href="RetroAchievementTracker.styles.css" rel="stylesheet" />
     <script src="_content/Blazor-Analytics/blazor-analytics.js"></script>
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
+
+    <!-- Hotjar Tracking Code for https://ra.bregan.me -->
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:2976226,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
+
 </head>
 <body>
     @RenderBody()
