logged in modal formatting

--- a/retrotrack.web/styles/GameModal.module.css
+++ b/retrotrack.web/styles/GameModal.module.css
@@ -26,3 +26,10 @@
     margin-left: 0px;
   }
 }
+
+.stickyFooter {
+  position: sticky;
+  bottom: 0; 
+  padding-bottom: 5px;
+  padding-top: 5px;
+}
